# MokaLogger

./: .gitignore  CMakeLists.txt
inc/moka/logger/: logger.h
src/moka/logger/: logger.cpp
tests/: test_log.cpp
